# svc-recipes

./: .dockerignore  .gitignore  .test.env  404.html  Dockerfile  Makefile  README.md  api.py  app.py  config.py  docker-compose.yaml  domain.py  index.html  main.py  mkdocs.yml  models.py  objects.inv  orm.py  pyproject.toml  repository.py  requirements.txt  router.py  services.py  uow.py
.github/workflows/: docs-deploy.yaml  pr.yaml
db/: index.html
docs/: db.md  index.md  repository.md
recipes/: app.py  config.py  domain.py  orm.py  repository.py  router.py  services.py  uow.py
repository/: index.html
search/: search_index.json
src/recipes/: app.py  config.py  domain.py  orm.py  repository.py  router.py  services.py  uow.py
tests/: conftest.py  test_app.py  test_repository.py  test_services.py  test_uow.py
tests/integration/: test_create_recipe.py
tests/unit/: conftest.py  test_app.py  test_config.py  test_domain.py  test_repository.py
