[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Sam Thorold <sam.thorold@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
psycopg2-binary = "^2.9.7"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
